# SPECTRE

./: COMPREHENSIVE_INTEGRATION_PLAN.md  INTEGRATION_PLAN.md  PNP_INTEGRATION_PLAN.md  PRIVACY_INTEGRATION_PLAN.md  PRODUCTION_ROADMAP.md  README.md  SPECTRE_MASTER_PLAN.md
.claude/: settings.local.json
spectre_protocol/: .gitignore  .prettierignore  Anchor.toml  calc_account_disc.js  calc_complete.js  calc_discriminator.js  calc_discriminator_more.js  calc_fund_agent.js  calc_withdraw.js  check_program.js  check_program.ts  check_tree.js  decode_key.js  dump_tx.js  dump_user_deposit.js  inspect_program_txs.js  list_accounts.js  package.json  verify_disc.js
spectre_protocol/app/: index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
spectre_protocol/app/api/privacy/: [...path].ts  prove.ts
spectre_protocol/app/src/: App.tsx  index.css  main.tsx  snarkjs.d.ts  vite-env.d.ts
spectre_protocol/app/src/components/compliance/: ComplianceStatus.tsx  RiskScore.tsx  index.ts
spectre_protocol/app/src/components/dashboard/: LayerVisualization.tsx  QuickActions.tsx  StatsCards.tsx  StatusIndicators.tsx  index.ts
spectre_protocol/app/src/components/layout/: Header.tsx  PageLayout.tsx  Sidebar.tsx  index.ts
spectre_protocol/app/src/components/privacy/: CircuitLoader.tsx  NoteManager.tsx  ProofProgressModal.tsx  ShieldForm.tsx  ShieldedBalance.tsx  index.ts
spectre_protocol/app/src/components/strategy/: DelegationStatus.tsx  StrategyConfig.tsx  index.ts
spectre_protocol/app/src/components/trading/: MarketList.tsx  PositionList.tsx  TradeForm.tsx  TradeHistory.tsx  index.ts
spectre_protocol/app/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Progress.tsx  index.ts
spectre_protocol/app/src/hooks/: index.ts  useBrowserPrivacy.ts  useCompliance.ts  usePnp.ts  usePrivacy.ts  useSpectreClient.ts  useTee.ts
spectre_protocol/app/src/lib/: utils.ts
spectre_protocol/app/src/lib/config/: constants.ts
spectre_protocol/app/src/lib/crypto/: browserCrypto.ts
spectre_protocol/app/src/lib/pnp/: BrowserPnpClient.ts
spectre_protocol/app/src/lib/privacy/: BrowserPrivacyCash.ts  BrowserPrivacyClient.ts  browser-encryption.ts  browser-poseidon.ts  browser-prover.ts  browser-storage.ts  browser-utxo.ts  circuitLoader.ts  proofWorker.ts
spectre_protocol/app/src/lib/shims/: buffer-shim.ts  fs-shim.ts  localstorage-shim.ts  polyfill-shims.ts  process-shim.ts
spectre_protocol/app/src/lib/tee/: BrowserTeeClient.ts
spectre_protocol/app/src/pages/: Dashboard.tsx  Positions.tsx  Shield.tsx  Strategy.tsx  Trade.tsx  Withdraw.tsx  index.ts
spectre_protocol/app/src/stores/: index.ts  privacyStore.ts  tradingStore.ts
spectre_protocol/client/src/: crank.ts  index.ts  pnp.ts  privacy.ts  range.ts  tee.ts  withdrawal.ts
spectre_protocol/programs/spectre_protocol/: Cargo.toml
spectre_protocol/programs/spectre_protocol/src/: lib.rs
spectre_protocol/programs/spectre_protocol/src/cpi/: mod.rs  pnp_interface.rs
spectre_protocol/programs/spectre_protocol/src/state/: mod.rs
spectre_protocol/programs/spectre_protocol/src/strategy/: decision_tree.rs  mod.rs
spectre_protocol/programs/spectre_protocol/src/utils/: compliance.rs  mod.rs  privacy_bridge.rs
spectre_protocol/tests/: devnet_test.ts  live_integration_test.ts  pnp_integration.ts  privacy_integration.ts  range_compliance.ts  spectre_protocol.ts  stress_tests.ts  tee_delegation.ts  withdrawal_compliance.ts
