[package]
name = "spectre_protocol"
version = "0.1.0"
description = "SPECTRE - Strategic Private Execution & Confidential Trading Runtime Environment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spectre_protocol"

[features]
default = ["decision-tree"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Strategy features
decision-tree = []
# onnx = ["tract-onnx"]  # Phase 2: Enable when tract-onnx is added
# Mock features for testing
mock-privacy-cash = []
mock-pnp = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
# ephemeral-rollups-sdk = "0.1"  # Phase 2: TEE integration
# tract-onnx = { version = "0.22", optional = true }  # Phase 2: ONNX inference

[dev-dependencies]
# solana-program-test = "1.18"
# tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
