[package]
name = "spectre_protocol"
version = "0.1.0"
description = "SPECTRE - Strategic Private Execution & Confidential Trading Runtime Environment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spectre_protocol"

[features]
default = ["decision-tree"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Strategy features - Phase 2
decision-tree = []
# TEE features - MagicBlock Ephemeral Rollups
tee = []
# Mock features for testing
mock-privacy-cash = []
mock-pnp = []
mock-tee = []  # For local testing without actual TEE

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
# MagicBlock Ephemeral Rollups SDK for TEE delegation
ephemeral-rollups-sdk = { version = "0.8", features = ["anchor"] }

[dev-dependencies]
# solana-program-test = "1.18"
# tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
